bump actual version to 19. add "--enable-preview" to compile/surefire